MemberVO 일부 수정, application.properties에 오라클 url 추가, 칼로리계산기능(아직미완)

--- a/RUN_WAY/src/main/resources/static/index.html
+++ b/RUN_WAY/src/main/resources/static/index.html
@@ -182,6 +182,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#myPage">HOME</a></li>
         <li><a href="#profile" onclick='window.open("jsp/memberInserForm.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=400,height=800");'>PROFILE</a></li>
+        <li><a href="#" onclick='window.open("html/calCal.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=400,height=800");'>칼로리testver</a></li>
         <li><a href="#record">RECORD</a></li>
         <li><a href="#route">SEARCH ROUTES</a></li>
         <li><a href="#notice">NOTICE</a></li>
