--- a/RUN_WAY/src/main/resources/static/index.html
+++ b/RUN_WAY/src/main/resources/static/index.html
@@ -320,10 +320,10 @@
     <div class="col-md-8">
       <div class="row">
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+          <input class="form-control" id="contact_name" name="name" placeholder="Name" type="text" required>
         </div>
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+          <input class="form-control" id="contact_email" name="email" placeholder="Email" type="email" required>
         </div>
       </div>
       <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
@@ -352,6 +352,8 @@
 
 <script type="text/javascript">
 $(document).ready(function(){
+	
+	var login=$.cookie('logined');
   // Initialize Tooltip
   $('[data-toggle="tooltip"]').tooltip(); 
   
@@ -378,7 +380,22 @@ $(document).ready(function(){
       });
     } // End if
   });
-})
+  
+  //이메일 자동으로 채워주기
+  $.ajax({
+		url:"../getCal.jes",
+		type:"get",
+		data:{id:login},
+		success:function(data){
+			
+			$("#contact_email").val(data.email);
+			$("#contact_name").val(data.name);
+		},
+		error:function(){ 
+		}
+	});
+  
+});
 
 </script>
 
