--- a/RUN_WAY/src/main/resources/static/index.html
+++ b/RUN_WAY/src/main/resources/static/index.html
@@ -326,11 +326,11 @@
           <input class="form-control" id="contact_email" name="email" placeholder="Email" type="email" required>
         </div>
       </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+      <textarea class="form-control" id="contact_comment" name="comments" placeholder="Comment" rows="5"></textarea>
       <br>
       <div class="row">
         <div class="col-md-12 form-group">
-          <button class="btn pull-right" type="submit">Send</button>
+          <button class="btn pull-right" id="contact_send_btn" type="submit">Send</button>
         </div>
       </div>
     </div>
