칼로리계산에서 성별값 기본으로 선택되도록 설정

--- a/RUN_WAY/src/main/resources/static/html/calCal.html
+++ b/RUN_WAY/src/main/resources/static/html/calCal.html
@@ -51,15 +51,28 @@ var login=$.cookie('logined');
 		type:"get",
 		data:{id:login},
 		success:function(data){
-			console.log(data);
 			
+			var radioVal = data.gender;
+			console.log(data);
 			$("#default_age").val(data.age);
 			$("#default_height").val(data.height);
 			$("#default_weight").val(data.weight);
+			$(":radio[name='default_gender']").radioSelect(radioVal);
 		},
 		error:function(){ 
 		}
 	});
+	
+	$.fn.radioSelect = function(val) {
+		 this.each(function() {
+		 	var $this = $(this);
+		 	if($this.val() == val){
+				$this.attr('checked', true);
+		 	}
+		 });
+		 return this;
+	};
+
 </script>
 </body>
 </html>
