--- a/RUN_WAY/src/main/resources/static/html/memberInsertForm.html
+++ b/RUN_WAY/src/main/resources/static/html/memberInsertForm.html
@@ -145,8 +145,8 @@
                     </div>
                     <div class="form-group">
                         <label for="inputGender">Gender</label><br>
-                        <label><input type="radio" name="gender" id="gender" value="male"/>Male</label>
-                    	<label><input type="radio" name="gender" id="gender" value="female"/>Female</label>
+                        <label><input type="radio" name="gender" value="male"/>Male</label>
+                    	<label><input type="radio" name="gender" value="female"/>Female</label>
                     </div>
 
                     <div class="form-group text-center"  onclick="validate();">
