--- a/RUN_WAY/src/main/resources/static/index.html
+++ b/RUN_WAY/src/main/resources/static/index.html
@@ -184,7 +184,7 @@
         <li><a href="#profile" onclick='window.open("jsp/memberInserForm.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=400,height=800");'>PROFILE</a></li>
         <li><a href="#" onclick='window.open("html/calCal.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=600,height=400");'>칼로리testver</a></li>
         <li><a href="#record">RECORD</a></li>
-        <li><a href="#route">SEARCH ROUTES</a></li>
+        <li><a href="#route" onclick='window.open("html/maptest3.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=600,height=600");'>SEARCH ROUTES</a></li>
         <li><a href="#notice">NOTICE</a></li>
         <li><a href="#contact">CONTACT</a></li>       
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
