--- a/RUN_WAY/src/main/resources/static/html/maptest.html
+++ b/RUN_WAY/src/main/resources/static/html/maptest.html
@@ -15,9 +15,14 @@
 	var resultdrawArr = [];
 
 	function initTmap() {
+		
+		var latitude = 37.4800384;
+		var longitude = 127.008768;
+		var endX = 37.48010118;
+		var endY = 127.00887675;
 		// 1. 지도 띄우기
 		map = new Tmapv2.Map("map_div", {
-			center : new Tmapv2.LatLng(37.570028, 126.989072),
+			center : new Tmapv2.LatLng(latitude, longitude),
 			width : "100%",
 			height : "400px",
 			zoom : 15,
@@ -29,7 +34,7 @@
 		// 시작
 		marker_s = new Tmapv2.Marker(
 				{
-					position : new Tmapv2.LatLng(37.56689860, 126.97871544),
+					position : new Tmapv2.LatLng(latitude, longitude),
 					icon : "http://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_s.png",
 					iconSize : new Tmapv2.Size(24, 38),
 					map : map
@@ -38,7 +43,7 @@
 		// 도착
 		marker_e = new Tmapv2.Marker(
 				{
-					position : new Tmapv2.LatLng(37.57081522, 127.00160213),
+					position : new Tmapv2.LatLng(endX, endY),
 					icon : "http://tmapapi.sktelecom.com/upload/tmap/marker/pin_r_m_e.png",
 					iconSize : new Tmapv2.Size(24, 38),
 					map : map
@@ -48,10 +53,10 @@
 		$.post(
 				"../local2.jes",
 				{ 
-					startX : "126.97871544",
-					startY : "37.56689860",
-					endX : "127.00160213",
-					endY : "37.57081522",
+					startX : "127.008768",
+					startY : "37.4800384",
+					endX : "127.00887675",
+					endY : "37.48010118",
 
 				},
 					function(response) {
