--- a/RUN_WAY/src/main/resources/static/html/recordlist2.html
+++ b/RUN_WAY/src/main/resources/static/html/recordlist2.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Run Way</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
-        
-  <!-- jQuery library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-		
-  <!-- Latest compiled JavaScript -->
-  <script type="text/javascript" src="js/my.js"></script>
-	
-    <!--  ----------- RECORD Bootstrap ----------------------------- -->
+<meta charset="UTF-8">
+<title>Insert title here</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(function(){
+		$("#getID").click(function(){
+			$.get("../local4.jes",
+					  {		
+						id:{id:login}
+					  },
+					  function(data){			 
+						  console.log(data);//[{"":},{},{}]
+						  data=JSON.parse(data);//JavaScript Object로 변환 [{:},{},{}]					  
+						  let table="<table class='table'><tr class='table-primary'><th>운동일</th><th>거리</th><th>칼로리</th>";
+						  for(let i=0;i<data.length;i++){
+							  console.log(data[i]);
+							  table += "<tr class='table-info'><td>"+data[i].articleNO+"</td>";
+							  table += "<td>"+data[i].id+"</td>";
+							  if(data[i].level!=1){//답글일때
+								  table += "<td><a href='../main?articleNo="+data[i].articleNO+"&sign=viewArticle.do'><span style='padding-left:"+(data[i].level*10)+"px'>↪"+data[i].title+"</span></a></td>";
+							  }else{//첫글일때
+								  table += "<td><a href='../main?articleNo="+data[i].articleNO+"&sign=viewArticle.do'>"+data[i].title+"</a></td>";
+							  }
+							  
+							  table += "<td>"+data[i].writeDate+"</td></tr>";
+						  }
+						  table += "</table>";
+						  $("#boardListDiv").html(table);
+					  }
+			);	
+		});
+	});
+
+
+</script>
+
+
+
+<!------------- RECORD Bootstrap -------------------------------> 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 			crossorigin="anonymous"></script>
@@ -25,9 +55,9 @@
 			src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 			integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 			crossorigin="anonymous"></script>  
-  <!--  ----------- ---------------- ----------------------------- -->
-	
-  <style>
+ <!---------------------------------------------------------> 
+
+<style>	
   body {
     font: 400 15px/1.8 Lato, sans-serif;
     color: #777;
@@ -250,156 +280,13 @@
 	min-width:250px;
 }
 	  
-/* <!--  ----------- RECORD CSS ----------------------------- --> */
+/* <!------------- RECORD CSS -------------------------------> */
 
-  </style>
+
+</style>
 </head>
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+<body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">RUN WAY</a>
-      <div id="msgDiv" class="navbar-brand">
-		ID<input size="5" id="id" style="color:black;">
-		PW<input size="5" id="pw" type="password" style="color:black;">
-		<input type="button" id="loginBtn" value="LOGIN" style="color:black;">
-		<input type="button" value="SIGN UP" style="color:black;" onclick='window.open("html/memberInsertForm.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=400,height=800");'>
-	</div>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#myPage">HOME</a></li>
-        <li><a href="#profile" onclick='window.open("jsp/memberInserForm.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=400,height=800");'>PROFILE</a></li>
-        <li><a href="#" onclick='window.open("html/calCal.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=600,height=400");'>칼로리testver</a></li>
-        <li><a href="#" onclick='window.open("html/recordlist2.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=1200,height=600");'>RECORD</a></li>
-        <li><a href="#route" onclick='window.open("html/maptest3.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=100,left=500,width=600,height=600");'>SEARCH ROUTES</a></li>
-        <li><a href="#notice">NOTICE</a></li>
-        <li><a href="#contact">CONTACT</a></li>       
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="img/map.png" alt="ky" width="1200" height="700">
-        <div class="carousel-caption">
-          <h3>Palace Walls and Cheongyecheon urban river</h3>
-          <p>The atmosphere in palace is lorem ipsum.</p>
-        </div>      
-      </div>
-
-      <div class="item">
-        <img src="img/map1.png" alt="Chicago" width="1200" height="700">
-        <div class="carousel-caption">
-          <h3>Namsan edge and Cheonggyecheon Stream loop</h3>
-          <p>Thank you, Namsan - A night we won't forget.</p>
-        </div>      
-      </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<!-- Container (The Notice Section) -->
-<div id="notice" class="container text-center">
-  <h3>RUN WAY</h3>
-  <p><em>We love walking!</em></p>
-  <p> 여러 사람들이 추천해주고 그중 인기있엇던 추천 산책길</p>
-  <br>
-  <div class="row">
-    <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
-      <a href="#demo" data-toggle="collapse">
-        <img src="#" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo" class="collapse">
-        <p>Guitarist and Lead Vocalist</p>
-        <p>Loves long walks on the beach</p>
-        <p>Member since 1988</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
-      <a href="#demo2" data-toggle="collapse">
-        <img src="#.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo2" class="collapse">
-        <p>Drummer</p>
-        <p>Loves drummin'</p>
-        <p>Member since 1988</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
-      <a href="#demo3" data-toggle="collapse">
-        <img src="#.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo3" class="collapse">
-        <p>Bass player</p>
-        <p>Loves math</p>
-        <p>Member since 2005</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Container (Record Section) -->
-<!-- RECORD 원래 부분
-	<div id="record" class="container">
-  <h3 class="text-center">Record</h3>
-  <p class="text-center"><em>Keep Exercise!</em></p>
-
-  <div class="row">
-    <div class="col-md-4">
-      <p>Fan? Drop a note.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
-    </div>
-    <div class="col-md-8">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-        </div>
-      </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
-      <br>
-      <div class="row">
-        <div class="col-md-12 form-group">
-          <button class="btn pull-right" type="submit">Send</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
--->
 <div id="record" class="container"> <!-- RECORD수정된 부분 -->
 			<h3 class="text-center">RECORD</h3>
 			<div id="left1" class="text-center">
@@ -554,16 +441,15 @@
 			  <div class="tab-pane fade show active" id="t1d1">
 				<div class="right1">
 					<img
-						src="https://support.apple.com/library/content/dam/edam/applecare/images/ko_KR/applewatch/ios14-iphone12-pro-activity-summary-workouts-run-route.jpg"
+						src="../img/mapimg1.JPG"
 						class="rounded mx-auto d-block" alt="map"
-						height="600px" style='margin: 5px 3px;'>
+						height="300px" style='margin: 5px 3px;'>
 				</div>
 				<div>
 					  <button class="btn pull-center" type="submit" style='width:63%; height:40px;'>구간별 상세정보 보기</button>
 					  <button class="btn pull-center" type="submit" style='width:33%; height:40px;'>공유하기</button>
 				</div>
 				<div class="right2">
-					  <h2>평균속력 : 7</h2>
 					  <h2>운동시간 : 55m</h2>
 					  <h2>칼로리 : 600</h2>
 				</div>
@@ -572,16 +458,15 @@
 			  <div class="tab-pane fade" id="t1d2">
 				<div class="right1">
 					<img
-						src="https://appassets.mvtdev.com/map/91/l/1802/280547/2372265.jpg"
+						src="../img/mapimg2.JPG"
 						class="rounded mx-auto d-block" alt="map"
-						height="600px" style='margin: 5px 3px;'>
+						height="300px" style='margin: 5px 3px;'>
 				</div>
 				<div>
 					  <button class="btn pull-center" type="submit" style='width:63%; height:40px;'>구간별 상세정보 보기</button>
 					  <button class="btn pull-center" type="submit" style='width:33%; height:40px;'>공유하기</button>
 				</div>
 				<div class="right2">
-					  <h2>평균속력 : 6.8</h2>
 					  <h2>운동시간 : 1h22m</h2>
 					  <h2>칼로리 : 980</h2>
 				</div>
@@ -590,99 +475,5 @@
 			</div>
 		</div>
 	
-<!-- Container (Contact Section) -->
-<div id="contact" class="container">
-  <h3 class="text-center">Contact</h3>
-  <p class="text-center"><em>We love our fans!</em></p>
-
-  <div class="row">
-    <div class="col-md-4">
-      <p>Fan? Drop a note.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
-    </div>
-    <div class="col-md-8">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="contact_name" name="name" placeholder="Name" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="contact_email" name="email" placeholder="Email" type="email" required>
-        </div>
-      </div>
-      <textarea class="form-control" id="contact_comment" name="comments" placeholder="Comment" rows="5"></textarea>
-      <br>
-      <div class="row">
-        <div class="col-md-12 form-group">
-          <button class="btn pull-right" id="contact_send_btn" type="submit">Send</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Footer -->
-<footer class="text-center">
-  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a><br><br>
-  <p>Run Way Made By 아이고... 그래도 잘했조</p> 
-</footer>
-
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
-
-<script type="text/javascript">
-$(document).ready(function(){
-	
-	var login=$.cookie('logined');
-  // Initialize Tooltip
-  $('[data-toggle="tooltip"]').tooltip(); 
-  
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
-
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-
-      // Prevent default anchor click behavior
-      event.preventDefault();
-
-      // Store hash
-      var hash = this.hash;
-
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 900, function(){
-   
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
-  
-  //이메일 자동으로 채워주기
-  $.ajax({
-		url:"../getCal.jes",
-		type:"get",
-		data:{id:login},
-		success:function(data){
-			
-			$("#contact_email").val(data.email);
-			$("#contact_name").val(data.name);
-		},
-		error:function(){ 
-		}
-	});
-  
-});
-
-</script>
-
 </body>
 </html>
