--- a/RUN_WAY/src/main/resources/static/html/calCal.html
+++ b/RUN_WAY/src/main/resources/static/html/calCal.html
@@ -1,6 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style>
+		body {
+		font: 400 15px/1.8 Lato, sans-serif;
+		color: #777;
+		}
+
+		h3, h4 {
+			margin: 3px;
+			letter-spacing: 10px;
+			font-size: 20px;
+			color: #111;
+		}			
+
+		.container1 {
+			box-sizing: border-box;
+			position: relative;
+			text-align: center;
+			border-radius: 6px;
+			display: inline-block;
+			margin: 10px;
+			padding: 14px;
+			position: relative;
+			width:55%;
+			min-width:500px;
+		}
+
+		#calc {
+			width: 85%;
+			height: 100%;
+			border: 1px solid #003458;
+			display: relative;
+			padding: 10px;
+			margin: 20px 20px;
+			border-radius: 6px;
+		}
+
+		#left1 {
+			width: 65%;
+			float: center;
+			box-sizing: border-box;
+			background: #c0c0c0;
+			border: 2px;
+			height: 90%;
+			clear: left;
+			padding: 10px;
+			min-width: 250px;
+		}
+
+		.center1 {
+			width: 65%;
+			text-align: center;
+			box-sizing: border-box;
+			background: #c0c0c0; border : 2px;
+			height: 90%;
+			clear: left;
+			padding: 10px;
+			min-width: 250px;
+			margin-left: auto;
+			margin-right: auto;
+			border: 2px;
+		}
+
+		#right1 {
+			width: 30%;
+			float: right;
+			box-sizing: border-box;
+			background: #c0c0c0;
+			border: 2px;
+			height: 90%;
+			clear: right;
+			padding: 10px;
+			min-width: 250px;
+		}
+	</style>
+
 <meta charset="UTF-8">
 <title>Test</title>
 <!-- jQuery library -->
@@ -17,62 +92,65 @@
 </head>
 
 <body>
-	<input id='id' type='hidden' value='a'>
-	<div id="cal_box">
-		예상 소모 칼로리 보기 
-		<br> 
-		<div id="workoutTime_div">
-		희망 운동시간<input id="workout_hour"> 분 
+	<div id="calc" class="container1 text-center ">
+		<input id='id' type='hidden' value='a'>
+		<div id="cal_box" class="container2	">
+			<h3>예상 소모 칼로리 보기</h3>
+			<br>
+			<div id="workoutTime_div" class="center1">
+				희망 운동시간<input id="workout_hour"> 분
+			</div>
+			<div id="gender_div" class="center1">
+				성별
+				<div>
+					남성<input name="default_gender" type="radio" value="male">
+					여성<input name="default_gender" type="radio" value="female">
+				</div>
+			</div>
+			<div id='age_div' class="center1">
+				나이<input id="default_age">세
+			</div>
+			<div id="height_div" class="center1">
+				키<input id="default_height">cm
+			</div>
+			<div id="weight_div" class="center1">
+				몸무게<input id="default_weight" value="">kg
+			</div>
+			<input type="button" id="getCal" value="칼로리 계산" style="color: black;">
 		</div>
-		<div id="gender_div">
-		성별<br>
-		남성<input name="default_gender" type="radio" value="male"> 
-		여성<input name="default_gender" type="radio" value="female"> 
-		</div>
-		<div id='age_div'>
-		나이<input id="default_age">세 
-		</div> 
-		<div id="height_div">
-		키<input id="default_height">cm
-		</div>
-		<div id="weight_div">
-		몸무게<input id="default_weight" value="">kg 
-		</div> 
-		<input type="button" id="getCal" value="칼로리 계산" style="color: black;">
+		<div id="result_cal"></div>
 	</div>
-	<div id="result_cal"></div>
-	
-<script type="text/javascript">
+	<script type="text/javascript">
+		var login = $.cookie('logined');
 
-var login=$.cookie('logined');
+		$.ajax({
+			url : "../getCal.jes",
+			type : "get",
+			data : {
+				id : login
+			},
+			success : function(data) {
 
-	$.ajax({
-		url:"../getCal.jes",
-		type:"get",
-		data:{id:login},
-		success:function(data){
-			
-			var radioVal = data.gender;
-			console.log(data);
-			$("#default_age").val(data.age);
-			$("#default_height").val(data.height);
-			$("#default_weight").val(data.weight);
-			$(":radio[name='default_gender']").radioSelect(radioVal);
-		},
-		error:function(){ 
-		}
-	});
-	
-	$.fn.radioSelect = function(val) {
-		 this.each(function() {
-		 	var $this = $(this);
-		 	if($this.val() == val){
-				$this.attr('checked', true);
-		 	}
-		 });
-		 return this;
-	};
+				var radioVal = data.gender;
+				console.log(data);
+				$("#default_age").val(data.age);
+				$("#default_height").val(data.height);
+				$("#default_weight").val(data.weight);
+				$(":radio[name='default_gender']").radioSelect(radioVal);
+			},
+			error : function() {
+			}
+		});
 
-</script>
+		$.fn.radioSelect = function(val) {
+			this.each(function() {
+				var $this = $(this);
+				if ($this.val() == val) {
+					$this.attr('checked', true);
+				}
+			});
+			return this;
+		};
+	</script>
 </body>
 </html>
